--- a/public/style.css
+++ b/public/style.css
@@ -17,19 +17,6 @@ body {
   display: none;
 }
 
-iframe {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  border:0px;
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  border-radius: 4px;
-}
-
 webview {
   width: 100%;
   height: 100%;
@@ -40,7 +27,7 @@ webview {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 
@@ -76,7 +63,7 @@ div#content {
   background-color: rgba(0,0,0,0);
   margin: 0px;
   padding: 0px;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 div#inner-content {
@@ -84,22 +71,59 @@ div#inner-content {
   margin: 0px;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
-div#credit {
-  position: absolute;
-  bottom: 4px;
-  right: 20px;
-}
-
-#exit, #max, #min, #opt {
+#exit, #max, #min {
   width: 24px;
   height: 24px;
+  border-radius: 12px;
   -webkit-app-region: no-drag;
 }
+		/* Dropdown Button */
+.dropbtn {
+    background-color: rgba(0,0,0,0);
+    color:#fff;
+    padding: 16px;
+	  font-family: "Comic Sans MS";
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
 
-#title {
-  background: transparent;
-  color: #FFF;
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color:#000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    border: 0px;
 }
