--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@
 }
 
 div.search {
-  top: 120px;
+  top: 64px;
   margin-top: 1px;
   padding: 1px 0 0 0;
   z-index: 2;
@@ -64,7 +64,7 @@ body,
     position: relative;
 }
 .player .btn {
-    background-color: #000;
+    background-color: #212121;
     border-radius: 50%;
     box-shadow: 0 1px 4px rgba(0,0,0,.3);
     color: white;
@@ -82,7 +82,7 @@ body,
     -webkit-transition: background-color 300ms;
 }
 .player .btn:active {
-    background-color: #000;
+    background-color: #212121;
     box-shadow: 0 1px 4px rgba(0,0,0,.3) inset, 0 1px 2px rgba(0,0,0,.3);
 }
 .player .player-title {
@@ -101,6 +101,7 @@ body,
     color: white;
     background-color: #000;
     padding: 3px;
+    border-radius:2px;
 }
 .player .time {
     bottom: 10px;
